--- a/sgim/templates/home.html
+++ b/sgim/templates/home.html
@@ -13,7 +13,9 @@
 {% endblock include_statics %}
 
 {% block contenido %}
-
+<ul class="breadcrumb" style="margin-bottom: 5px;">
+    <li class="active"><a href="/">Inicio</a></li>
+</ul>
 
 <div id="grid" style="width: 100%; height: 350px; "></div>
 
