--- a/sgim/templates/includes/nav_bar.html
+++ b/sgim/templates/includes/nav_bar.html
@@ -1,4 +1,4 @@
-<div class="navbar shadow-z-1 navbar-fixed-top" >
+<div class="navbar shadow-z-1 navbar-fixed-top ui top attached" >
    
     <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
@@ -6,26 +6,13 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="/">STERM</a>
+
+        <a class="navbar-brand" href="#">Sala Tecnica</a>
     </div>
     {% if user.is_authenticated %}            
         <div class="navbar-collapse collapse navbar-responsive-collapse">
             <ul class="nav navbar-nav">
-                <li ><a href="javascript:void(0)">Active</a></li>
-
-                <li><a href="javascript:void(0)">Link</a></li>
-                <li class="dropdown">
-                    <a href="bootstrap-elements.html" data-target="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="javascript:void(0)">Action</a></li>
-                        <li><a href="javascript:void(0)">Another action</a></li>
-                        <li><a href="javascript:void(0)">Something else here</a></li>
-                        <li class="divider"></li>
-                        <li class="dropdown-header">Dropdown header</li>
-                        <li><a href="javascript:void(0)">Separated link</a></li>
-                        <li><a href="javascript:void(0)">One more separated link</a></li>
-                    </ul>
-                </li>
+                <li class="toggle"><a href="javascript:void(0)"><i class="mdi-navigation-more-vert"></i></a></li>               
             </ul>
           
             <ul class="nav navbar-nav navbar-right">
